# yakerf

./: .gitignore  404.html  Makefile  OPTIMIZATION_REPORT.md  docs.html  docs.txt  highlighted_text.txt  index.html  index.txt  main.py  pyproject.toml  pytest.ini  requirements.lock.txt  requirements.txt  setup.py
.github/workflows/: create-release.yml  deploy.yml  format.yml  install.yml  lint.yml  resultados.yml  test.yml
demo/: requirements.txt  streamlit_app.py
docs/: --home.html  --home.txt  -getting-started.html  -getting-started.txt  -related-projects.html  -related-projects.txt  About.html  About.txt  Home.html  Home.txt  about.html  about.txt  getting-started.html  getting-started.txt  gettingstarted.html  gettingstarted.txt  home.html  home.txt  related-projects.html  related-projects.txt  relatedprojects.html  relatedprojects.txt
docs/core/: Levenshtein.html  Levenshtein.txt  highlight.html  highlight.txt  yake.html  yake.txt
docs/data/: composedword.html  composedword.txt  (+6 more)
pke/: yake.py
results/: latest_benchmark_definitivo.json  yake_benchmark_definitivo_20250923_182551_07ac4489.json  yake_benchmark_definitivo_20250923_182555_c657397f.json  yake_benchmark_definitivo_20250923_182613_854aece9.json  yake_benchmark_definitivo_20250923_182832_8c959f7d.json  yake_benchmark_definitivo_20250923_182837_fa27a053.json
scripts/: README_ROBUST_BENCHMARK.md  benchmark_definitivo.py  lightweight_benchmark.py  profile_yake.py
tests/: test_cli.py  test_yake.py  yakenew.md
yake/: Levenshtein.py  __init__.py  cli.py  datarepresentation.py  highlight.py  yake.py
(+40 files in other folders)
