[project]
name = "yakerf"
version = "0.1.0"
description = "Yake Refatorado"
authors = [{ name = "Tiago Valente", email = "tiagoleandrovalente@gmail.com" }]
requires-python = ">=3.8"

dependencies = [
    "tabulate",
    "pytest",  
    "flake8",
    "segtok",
    "jellyfish",
    "networkx",
    "numpy",
    "click",  
    "nbval",
    "ruff==0.0.290"
]

[project.optional-dependencies]
dev = [
    "black==22.3.0",
    "click==8.1.3",
    "pytest==7.1.3",
    "pytest-cov==4.0.0",
    "pylint==2.15.3"
]

[build-system]
requires = ["uv"]
build-backend = "uv"
